# rs-ai-sdk

./: .gitignore  Cargo.toml  README.md
scripts/: export_model.rs
src/: lib.rs  main.rs
src/language_model/: dummy.rs  huggingface.rs  huggingface_local.rs  mod.rs  openai.rs  types.rs
tests/: hugging_face_local.rs  language_model.rs
