[package]
name = "ai-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
